--- a/2hw8.html
+++ b/2hw8.html
@@ -12,11 +12,13 @@
             height: 100%;
         }
         .menu {
+            overflow: auto;
             height: calc(100vh - 110px);
             float: left;
             width: 250px;
         }
         ul {
+            
             font-weight: bold;
         }
         li {
@@ -27,11 +29,11 @@
             color: blue;
             font-weight: bold;
             text-align: center;
-            line-height: 40px; /* Vertically center the text */
+            line-height: 40px; 
         }
         .content {
             padding: 10px;
-            margin-left: 250px; /* Leave space for the menu */
+            margin-left: 250px; 
             background: url('./ball.jpg') repeat-y white;
             background-position: right;
             min-height: calc(100vh - 110px);
